# sec-filing-analyzer

./: .bandit.yaml  .env.example  .gitignore  .mypy.ini  .pre-commit-config.yaml  .pre-commit-log-wrapper.py  CONTRIBUTING.md  DIRECTORY_CONSOLIDATION.md  EXAMPLES.md  README.md  README_CHAT_APP.md  README_OPTIMIZED_PARALLEL_PROCESSING.md  RUNNING.md  SECURITY.md  add_nvda.py  check_companies.py  check_company_filings.py  check_db.py  check_financial_data.py  check_googl_data.py  check_metrics_schema.py  check_nvda_data.py  check_vector_store_simple.py  coverage.xml  create_aapl_company.py  data_explorer_solution_guide.md  debug_sec_financial_data.py  demo_full.patch  duckdb_cli.bat  duckdb_explorer.html  duckdb_explorer.py  launch_duckdb_explorer.bat  launch_explorer_alt_port.bat  launch_simple_explorer.bat  monitor_logs.py  organize_root_directory.py  organize_scripts.py  pyproject.toml  pyproject.toml.bak  pyproject.toml.merged  (+31 more)
.github/workflows/: ci.yml
.streamlit/: config.toml  config.toml.new
archive/batch_files/: launch_app_debug.bat  organize_batch_files.bat  run_app_with_exit.bat  run_data_explorer_debug.bat  run_duckdb.bat  run_etl_inventory.bat  run_explorer.bat  run_explorer_debug_detailed.bat  stop_streamlit_by_pid.bat
archive/db_backup/: financial_data.duckdb  test_db.duckdb  test_improved_xbrl.duckdb  test_optimized_financial_data.duckdb
archive/scripts/: README.md
archive/test_scripts/: README_ROBUST_EMBEDDINGS.md  check_cached_filing.py  check_database.py  check_db.py  check_dependencies.py  check_duckdb.py  check_duckdb_issues.py  check_improved_db_schema.py  check_schema.py  check_vector_store.py  debug_streamlit.py  diagnose_streamlit.py  duckdb_examination.json  embedding_test_results.json  examine_duckdb.py  find_nvda.py  find_port.py  fix_database_schema.py  fix_sync_manager.py  fix_sync_manager_code.py  fix_sync_manager_comprehensive.py  minimal_streamlit_app.py  organize_scripts.py  run_app.py  run_streamlit_app.py  run_with_debug.py  run_with_timeout.py  simplified_app.py  test_config.py  test_coordinator_config.py  test_db_connection.py  test_edgar_filings.py  test_embedding_issues.py  test_etl_pipeline.py  test_etl_pipeline_final.py  test_etl_pipeline_fix.py  test_etl_pipeline_multiple_filings.py  test_etl_pipeline_with_robust_embeddings.py  test_optimized_parallel_processor.py  test_robust_embeddings.py  (+1 more)
chat_app/: app.py
docs/: DIRECTORY_STRUCTURE.md  ETL_Pipeline_Organization.md  ROADMAP.md  TODO.md  XBRL_to_DuckDB_Integration.md  agent_config_integration.md  agent_loop.md  agent_parameters.md  chunking_architecture.md  chunking_consolidation.md  code_quality_exclusions.md  configuration_system.md  duckdb_exploration_tools.md  duckdb_tools_migration.md  duckdb_ui.md  error_handling.md  etl_data_inventory_components.md  exit_button.md  exploring_duckdb.md  improved_duckdb_schema.md  improved_xbrl_extractor.md  index.md  logging.md  parameter_completion.md  plan_step_tool_contract.md  planning_capability.md  quantitative_pipeline.md  reorganization.md  roadmap.md.new  schema_driven_tools.md  semantic_pipeline.md  tool_ledger.md  tool_parameter_models.md  unified_configuration_system.md  unified_pipeline.md
examples/: README.md  __init__.py  basic_usage.py  chat_demo_app.py  duckdb_store_extension.py  etl_config.py  finance_streamlit_demo.py  fixed_chat_agent.py  install_dependencies.py  parameter_adapter.py  query_revenue.py  run_chat_demo.py  run_nvda_etl.py  sec_downloader_patch.py  simple_chat_agent.py  streamlit_demo.py  test_fixed_chat_agent.py  test_parameter_adapter.py
notebooks/: explore_duckdb.ipynb
scripts/: README.md  add_companies.py  add_nvda.py  check_filing_paths.py  check_neo4j.py  check_neo4j_simple.py  clean_all_data.py  enhance_duckdb_schema.py  explore_vector_store.py  extract_streamlit_config.py  extract_tool_schemas.py  extract_vector_store_params.py  launch_duckdb_ui.py  log_precommit.ps1  log_precommit.sh  migrate_data_structure.py  migrate_embeddings_to_numpy.py  migrate_metadata_to_duckdb.py  prune_logs.ps1  prune_logs.sh  pytest_log_wrapper.py  query_revenue.py  rebuild_vector_index.py  reset_and_add_companies.py  reset_duckdb.py  run_etl_pipeline.py  run_nvda_etl.py  run_precommit.ps1  run_precommit.sh  run_pytest_with_logs.ps1  run_pytest_with_logs.sh  simple_test_lifecycle_manager.py  sync_storage.py  temp_check_schema.py  test_all_schema_driven_tools.py  test_config_provider.py  test_duckdb_metadata.py  test_lifecycle_manager.py  test_schema_driven_tools.py  test_unified_config.py  (+2 more)
scripts/analysis/: README.md  analyze_aapl_chunks.py  analyze_storage_efficiency.py  analyze_token_usage.py  direct_search.py  find_zero_vector_filings.py  test_coordinated_search.py  test_delta_index.py  test_faiss_persistence.py  test_vector_store.py
scripts/batch/: README.md  add_nvda.bat  clean_all_data.bat  reset_and_add_companies.bat  reset_duckdb.bat  run_app.bat  run_app.py  run_chat_app.bat  run_chat_app_alt.bat  run_chat_demo.bat  run_chat_demo.sh  run_data_management.bat  run_enhanced_etl_inventory.bat  run_etl_pipeline.bat  run_refreshable_etl_inventory.bat  test_lifecycle_manager.bat
scripts/cleanup/: __init__.py  cleanup_redundant_files.py
scripts/database/: check_db_schema.py  cleanup_databases.py  compare_duckdb_schemas.py  duckdb_cli.py  explore_duckdb.py  init_db.py  launch_duckdb_explorer.py  launch_duckdb_web.py  migrate_duckdb_schema.py  query_duckdb.py  query_financial_data.py  simple_duckdb_explorer.py  simple_schema.py  streamlit_duckdb_explorer.py
scripts/db/: README.md
scripts/demo/: README.md  duckdb_store_extension.py  install_dependencies.py  query_revenue.py  (+3 more)
src/: __init__.py  api.py  contracts.py  errors.py  goals.py
tests/: README.md  check_cached_filing.py  conftest.py  test_agents.py  test_api.py  test_capabilities.py  test_data_processing_pipeline.py  test_data_retrieval.py  test_embeddings.py  test_etl_pipeline.py  test_graphrag_init.py  test_nvda_etl.py  test_nvda_pipeline.py  test_nvda_single_filing.py  test_sec_downloader.py  test_sec_entities.py  test_sec_structure.py
(+504 files in other folders)
