[project]
name = "sec-filing-analyzer"
version = "0.1.0"
description = "A multi-agent LLM system for analyzing SEC filings and providing financial insights"
authors = [
    {name = "Timothy Wang", email = "timothy.yi.wang@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "edgartools (>=3.14.4,<4.0.0)",
    "spacy (>=3.8.5,<4.0.0)",
    "llama-index (>=0.12.28,<0.13.0)",
    "llama-index-graph-stores-neo4j (>=0.4.6,<0.5.0)",
    "faiss-cpu (>=1.10.0,<2.0.0)",
    "matplotlib (>=3.9.0,<4.0.0)",
    "streamlit (>=1.30.0,<2.0.0)",
    "plotly (>=5.15.0,<6.0.0)",
    "networkx (>=3.4.2,<4.0.0)",
    "pydantic (>=2.6.0,<3.0.0)",
    "h11 (>=0.16.0,<0.17.0)"
]

[tool.poetry]
packages = [{include = "sec_filing_analyzer", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
openai = "^1.12.0"
python-dotenv = "^1.0.1"
pydantic = ">=2.6.0,<3.0.0"
orjson = "^3.9.1"  # Fast JSON parser
duckdb = "^1.2.2"  # SQL database for metadata storage

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
